Changelog
=========

4.1.1 (unreleased)
------------------

- Updated to CKeditor 4.3.4
  [gotcha]


4.1 (2014-03-27)
----------------

- Expand setup of Advanced Content filter (ACF).
  [spereverde, gotcha]


4.0.0 (2014-02-05)
------------------

- Updated to CKeditor 4.3.2
  [gotcha]

- Add extraAllowedContent option to setup filter rules.
  [gotcha]

- Backward compatibility of toolbar settings
  [gotcha]

- Moved to CKeditor 4.2.3
  [gbastien]


3.6.12 (2013-09-05)
-------------------

- Make it possible to enable/disable SCAYT by default
  [gbastien]

3.6.11 (2013-05-30)
-------------------

- Stay compatible with IE<9, do not use indexOf in JS
  [gbastien]

3.6.10 (2013-05-30)
-------------------

- Updated ckeditor to 3.6.6.1
  [vincentfretin]

- travis setup / buildout infra
  [kiorky]

3.6.9 (2013-05-29)
------------------

- Works under Plone 4.3.
  [thomasdesvenain]


3.6.8 (2012-12-13)
------------------

- Update install and uninstall to change the default_editor site
  property instead of the wysiwyg_editor memberdata property.
  [maurits]

- Also check the default_editor site property when determining whether
  the member wants to use CKeditor.
  [maurits]

- Changed the way external plugins are registered. It's better to use the three
  parameter variant of ``CKEDITOR.plugins.addExternal`` because this will make
  the base URL for the plugin resources available within the plugin code as
  ``this.path`` correctly. Otherwise ``this.path`` contains the full URL to the
  plugin script itself which consequently breaks loading of related resources
  (images, translations, etc).
  [dokai]

- Refactored the ``ck_ruid_to_url`` transform to use plone.app.uuid to transform
  UIDs to URLs. This avoids using reference_catalog in favor of portal_catalog
  and appears to fix issues with Dexterity types not available through the
  reference_catalog.
  [dokai]

- Limited string length to be searched under 3000 characters by re.search method.
  [taito]
